<resources>

    <string name="app_name">CardFlight Demo</string>
    <string name="price">Price:</string>
    <string name="swipe_card">Swipe Card</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="send_swipe_data">Send swipe data</string>
    <string name="process_payment">Process payment</string>
    <string name="person_name">Person name:</string>
    <string name="person_name_hint">FIRSTNAME LASTNAME</string>
    <string name="credit_card_hint">1234 5678 1234 5678</string>
    <string name="card_number">Card number:</string>
    <string name="cvv_hint">1234</string>
    <string name="expire_date_hint">MM / YYYY</string>
    <string name="currency">Currency:</string>
    <string name="description">Description:</string>

</resources>