<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="@dimen/content_padding" >

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/field_height"
            android:text="@string/price"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_toRightOf="@+id/priceLabel"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/field_height"
            android:text="Description:"
            android:layout_below="@+id/priceEditText"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_toRightOf="@+id/descriptionLabel"
            android:layout_below="@+id/priceEditText"
            android:textSize="@dimen/text_size"
            />


        <TextView
            android:id="@+id/currencyLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/field_height"
            android:text="Currency:"
            android:layout_below="@+id/descriptionEditText"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/currencyEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_toRightOf="@+id/descriptionLabel"
            android:layout_below="@+id/descriptionEditText"
            android:textSize="@dimen/text_size"
            />


        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/field_height"
            android:layout_below="@+id/currencyEditText"
            android:text="@string/person_name" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_below="@+id/currencyLabel"
            android:layout_toRightOf="@+id/nameLabel"
            android:enabled="false"
            android:hint="@string/person_name_hint"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/cardNumberLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/field_height"
            android:layout_below="@+id/nameEditText"
            android:text="@string/card_number"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/cardEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_below="@+id/nameEditText"
            android:layout_toRightOf="@+id/cardNumberLabel"
            android:enabled="false"
            android:hint="@string/credit_card_hint"
            android:inputType="phone"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/cvvCodeEditText"
            android:layout_width="90dp"
            android:layout_height="@dimen/field_height"
            android:layout_below="@+id/cardEditText"
            android:layout_toRightOf="@+id/cardNumberLabel"
            android:enabled="false"
            android:hint="@string/cvv_hint"
            android:inputType="number"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/expireDateEditText"
            android:layout_width="100dp"
            android:layout_height="@dimen/field_height"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardEditText"
            android:enabled="false"
            android:hint="@string/expire_date_hint"
            android:inputType="datetime"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/swipeCardButton"
            android:layout_width="140dp"
            android:layout_height="@dimen/field_height"
            android:layout_below="@+id/expireDateEditText"
            android:layout_marginTop="@dimen/content_padding"
            android:onClick="launchSwipeEvent"
            android:text="@string/swipe_card"
            android:textSize="13sp" />

        <Button
            android:id="@+id/manualEntryButton"
            android:layout_width="140dp"
            android:layout_height="@dimen/field_height"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/expireDateEditText"
            android:layout_marginTop="@dimen/content_padding"
            android:onClick="launchManualEntry"
            android:text="@string/manual_entry"
            android:textSize="13sp" />

        <Button
            android:id="@+id/processPaymentButton"
            android:layout_width="200dp"
            android:layout_height="@dimen/field_height"
            android:layout_below="@+id/manualEntryButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/content_padding"
            android:onClick="processPayment"
            android:text="@string/process_payment"
            android:textSize="13sp" >


        </Button>

        <Button
            android:layout_width="200dp"
            android:layout_height="@dimen/field_height"
            android:text="Serial Number"
            android:id="@+id/serialNumber"
            android:textSize="13sp"
            android:onClick="displaySerialNumber"
            android:layout_below="@+id/processPaymentButton"
            android:layout_alignLeft="@+id/processPaymentButton" />

    </RelativeLayout>

</ScrollView>
